horizontal overflow corrected

--- a/css/style.css
+++ b/css/style.css
@@ -2,6 +2,12 @@ body {
     font-family: 'Ubuntu', sans-serif;
 }
 
+/* An override to Bootstrap's row class to prevent horizontal overflow */
+.row {
+    margin-left: 0;
+    margin-right: 0;
+}
+
 .alert-container .col-12 {	
     padding-left: 0;	
     padding-right: 0;	
@@ -98,7 +104,7 @@ body {
     color: white;
     font-weight: bold;
     margin-bottom: 30px;
-    padding-top: 75px;
+    padding-top: 125px;
 }
 .jumbotron .lead {
     color: #feb501;
@@ -155,5 +161,17 @@ body {
 
 .whiskeyofthemonth {
     text-align: center;
-    padding-top: 125px;
+    padding-top: 50px;
+    padding-bottom: 50px;
+}
+
+.feature { 
+    padding: 0;
+   font-size: 14px;
+}
+
+@media screen and (max-width: 768px) {
+   .feature {
+       padding: 10px 10px;
+   }
 }
